Hide extra chart, fix some layout issues on iphone

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -193,7 +193,10 @@ ul.poweredby li {
 
 .header .navbar .nav > div.ontop {
 	color: #999999;
-	padding: 5px 15px;
+}
+
+.header .navbar .nav > div.ontop a {
+    padding: 5px 15px;
 }
 
 @media (min-width: 768px) {
@@ -215,7 +218,7 @@ ul.poweredby li {
 	}
 
 	.header .navbar .nav > div.ontop a {
-		padding: 2px 10px;
+        padding: 2px 10px;
 		margin-top: -5px;
         line-height: 1.5em;
 	}
@@ -414,7 +417,7 @@ pre .boolean {
 }
 
 .v-center-area:after { 
-	padding-top: 40%;
+	padding-top: 39%;
     display: block;
     content: '';
 }
